--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <title>
       LinkedMusic &middot; Connecting music databases across genres and formats
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:4000/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:4000/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:4000/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="http://localhost:4000/assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon_io/site.webmanifest">
     <!-- CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body id ="Site" class='layout-reverse theme-base-sm sidebar-overlay'>
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -34,32 +34,26 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://localhost:4000/">LinkedMusic</a>
+          <a class="navbar-brand" href="">LinkedMusic</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="http://localhost:4000/about">About</a></li>
-            <li><a href="http://localhost:4000/people">Participants</a></li>
-            <li><a href="http://localhost:4000/activities">Activities</a></li>
-            <li><a href="http://localhost:4000/references">References</a></li>
-            <li><a href="http://localhost:4000/vim">VIM</a></li>
-            <li><a href="http://localhost:4000/opportunities">Opportunities</a></li>
-            <li><a href="http://localhost:4000/contact">Contact us</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="people">Participants</a></li>
+            <li><a href="activities">Activities</a></li>
+            <li><a href="references">References</a></li>
+            <li><a href="vim">VIM</a></li>
+            <li><a href="opportunities">Opportunities</a></li>
+            <li><a href="contact">Contact us</a></li>
           </ul>
           <div id="google_translate_element"></div>
-          <script type="text/javascript">
-            function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-            }
-          </script>
-          <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         </div>
       </div>
     </div>
     <section class="jumbotron">
       <div class="container">
         <div class="box">
-          <img class="logo_img" src="http://localhost:4000/assets/LM_LogoTransparentBlack1.png" alt="LinkedMusic logo" title="LinkedMusic">
+          <img class="logo_img" src="assets/LM_LogoTransparentBlack1.png" alt="LinkedMusic logo" title="LinkedMusic">
         </div>
       </div>
     </section>
@@ -93,68 +87,8 @@
     <br>
     <br>
     <br />
-    <style>
-      div.logo_map {
-      position: relative;
-      margin: auto;
-      }
-      div.logo_map > img {
-      display: block;
-      max-width: 100%;
-      margin: 0 auto;
-      }
-      div.logo_map > a {
-      display: block;
-      position: absolute;
-      }
-      div.logo_map > a:hover {
-      background-color: rgba(255, 0, 0, .0);
-      }
-      div.logo_map > a.sshrc {
-      top: 0%;
-      left: 20%;
-      width: 60%;
-      height: 25%;
-      }
-      div.logo_map > a.mcgill {
-      top: 20%;
-      left: 20%;
-      width: 34%;
-      height: 25%;
-      }
-      div.logo_map > a.ddmal {
-      top: 20%;
-      left: 54%;
-      width: 26%;
-      height: 25%;
-      }
-      div.logo_map > a.cirmmt {
-      top: 40%;
-      left: 20%;
-      width: 34%;
-      height: 25%;
-      }
-      div.logo_map > a.frqsc {
-      top: 40%;
-      left: 54%;
-      width: 26%;
-      height: 25%;
-      }
-      div.logo_map > a.computecanada {
-      top: 70%;
-      left: 20%;
-      width: 34%;
-      height: 25%;
-      }
-      div.logo_map > a.calculquebec {
-      top: 70%;
-      left: 54%;
-      width: 26%;
-      height: 25%;
-      }
-    </style>
     <div class="logo_map">
-      <img src="http://localhost:4000/assets/logos_website_new.png"/ border="0" style="max-width:80%">
+      <img src="assets/logos_website_new.png"/ border="0" style="max-width:80%">
       <a href="https://www.sshrc-crsh.gc.ca" target="_blank" class="sshrc"></a>
       <a href="https://www.mcgill.ca/music" target="_blank" class="mcgill"></a>
       <a href="https://ddmal.music.mcgill.ca/" target="_blank" class="ddmal"></a>
@@ -166,6 +100,12 @@
     <br>
     <br>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://localhost:4000/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
