Fix broken links and formatting on activities

--- a/activities/workshops/index.html
+++ b/activities/workshops/index.html
@@ -14,12 +14,12 @@
     <title>
       Workshops &middot; LinkedMusic
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:4000/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:4000/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:4000/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="http://localhost:4000/assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../../assets/favicon_io/site.webmanifest">
     <!-- CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
   <body id ="Site" class='layout-reverse theme-base-sm sidebar-overlay'>
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -34,26 +34,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://localhost:4000/">LinkedMusic</a>
+          <a class="navbar-brand" href="../../">LinkedMusic</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="http://localhost:4000/about">About</a></li>
-            <li><a href="http://localhost:4000/people">Participants</a></li>
-            <li><a href="http://localhost:4000/activities">Activities</a></li>
-            <li><a href="http://localhost:4000/references">References</a></li>
-            <li><a href="http://localhost:4000/vim">VIM</a></li>
-            <li><a href="http://localhost:4000/opportunities">Opportunities</a></li>
-            <li><a href="http://localhost:4000/contact">Contact us</a></li>
+            <li><a href="../../about">About</a></li>
+            <li><a href="../../people">Participants</a></li>
+            <li><a href="../../activities">Activities</a></li>
+            <li><a href="../../references">References</a></li>
+            <li><a href="../../vim">VIM</a></li>
+            <li><a href="../../opportunities">Opportunities</a></li>
+            <li><a href="../../contact">Contact us</a></li>
           </ul>
           <div id="google_translate_element"></div>
-          <script type="text/javascript">
-            function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-            }
-          </script>
-          <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="page-header" id="banner">
         <div class="row">
@@ -70,7 +66,7 @@
             <div class="col-lg-12">
               <h2 data-toggle="collapse" data-target="#2019">
                 2019
-                <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#2019" />
+                <img class="icon_rotation" src="../../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#2019" />
               </h2>
               <hr />
               <div id="2019" class="collapse in">
@@ -85,7 +81,6 @@
                       September 21, 2019
                     </h4>
                     <p>On 21 September 2019, we had our 19th SIMSSA workshop, this time here at McGill in collaboration with <a href="https://www.cirmmt.org">CIRMMT</a>. For more details, please check out our <a href="https://simssa.ca/blog/simssa-xix/" title="SIMSSA XIX blog">blog post</a>.</p>
-                    <p><img src="http://localhost:4000/assets/img/simssaxix_group.png" alt="" /></p>
                     <p>Presenters included:</p>
                     <ul>
                       <li>Ichiro Fujinaga, SIMSSA PI</li>
@@ -111,24 +106,17 @@
               </div>
             </div>
           </div>
-          <script>
-            $(document).ready(function(){
-              $('.icon_rotation').on({
-                'click': function () {
-                  var origsrc = $(this).attr('src');
-                  var src = '';
-                  if (origsrc == 'http://localhost:4000/assets/0-expand_off.png') src = 'http://localhost:4000/assets/0-expand_on.png';
-                  if (origsrc == 'http://localhost:4000/assets/0-expand_on.png') src = 'http://localhost:4000/assets/0-expand_off.png';
-                  $(this).attr('src', src);
-                }
-              });
-            });
+          <script type="text/javascript">
+            function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+            }
           </script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+          <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
           <br>
         </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://localhost:4000/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
   </body>
 </html>
