Fix broken links

--- a/404.html
+++ b/404.html
@@ -14,12 +14,12 @@
     <title>
       404: Page not found &middot; LinkedMusic
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:4000/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:4000/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:4000/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="http://localhost:4000/assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://site-deforesting.github.io/linkedmusic-website/assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://site-deforesting.github.io/linkedmusic-website/assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://site-deforesting.github.io/linkedmusic-website/assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="https://site-deforesting.github.io/linkedmusic-website/assets/favicon_io/site.webmanifest">
     <!-- CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/assets/css/main.css" />
+    <link rel="stylesheet" href="https://site-deforesting.github.io/linkedmusic-website/assets/css/main.css" />
   </head>
   <body id ="Site" class='layout-reverse theme-base-sm sidebar-overlay'>
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -34,29 +34,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://localhost:4000/">LinkedMusic</a>
+          <a class="navbar-brand" href="https://site-deforesting.github.io/linkedmusic-website/">LinkedMusic</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="http://localhost:4000/about">About</a></li>
-            <li><a href="http://localhost:4000/people">Participants</a></li>
-            <li><a href="http://localhost:4000/activities">Activities</a></li>
-            <li><a href="http://localhost:4000/references">References</a></li>
-            <li><a href="http://localhost:4000/vim">VIM</a></li>
-            <li><a href="http://localhost:4000/opportunities">Opportunities</a></li>
-            <li><a href="http://localhost:4000/contact">Contact us</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/about">About</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/people">Participants</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/activities">Activities</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/references">References</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/vim">VIM</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/opportunities">Opportunities</a></li>
+            <li><a href="https://site-deforesting.github.io/linkedmusic-website/contact">Contact us</a></li>
           </ul>
           <div id="google_translate_element"></div>
-          <script type="text/javascript">
-            function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-            }
-          </script>
-          <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <div class="container">
       <div class="page-header" id="banner">
         <div class="row">
@@ -69,12 +62,18 @@
           <br>
           <h1>404: Page not found</h1>
           <br>
-          <p>Sorry, we’ve misplaced that URL or it’s pointing to something that doesn’t exist. <a href="http://localhost:4000/">Head back home</a> to try finding it again.</p>
+          <p>Sorry, we’ve misplaced that URL or it’s pointing to something that doesn’t exist. <a href="https://site-deforesting.github.io/linkedmusic-website/">Head back home</a> to try finding it again.</p>
           <br>
         </div>
       </div>
     </div>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://localhost:4000/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://site-deforesting.github.io/linkedmusic-website/js/bootstrap.min.js"></script>
   </body>
 </html>
