Fix broken links participants page

--- a/people/index.html
+++ b/people/index.html
@@ -14,12 +14,12 @@
     <title>
       Participants &middot; LinkedMusic
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:4000/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:4000/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:4000/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="http://localhost:4000/assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon_io/site.webmanifest">
     <!-- CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
   <body id ="Site" class='layout-reverse theme-base-sm sidebar-overlay'>
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -34,29 +34,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://localhost:4000/">LinkedMusic</a>
+          <a class="navbar-brand" href="../">LinkedMusic</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="http://localhost:4000/about">About</a></li>
-            <li><a href="http://localhost:4000/people">Participants</a></li>
-            <li><a href="http://localhost:4000/activities">Activities</a></li>
-            <li><a href="http://localhost:4000/references">References</a></li>
-            <li><a href="http://localhost:4000/vim">VIM</a></li>
-            <li><a href="http://localhost:4000/opportunities">Opportunities</a></li>
-            <li><a href="http://localhost:4000/contact">Contact us</a></li>
+            <li><a href="../about">About</a></li>
+            <li><a href="../people">Participants</a></li>
+            <li><a href="../activities">Activities</a></li>
+            <li><a href="../references">References</a></li>
+            <li><a href="../vim">VIM</a></li>
+            <li><a href="../opportunities">Opportunities</a></li>
+            <li><a href="../contact">Contact us</a></li>
           </ul>
           <div id="google_translate_element"></div>
-          <script type="text/javascript">
-            function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-            }
-          </script>
-          <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <section class="headerimage_people">
       <div class="container">
         <div class="row">
@@ -88,7 +81,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#co-investigators">
     Co-Applicants / cocandidats et cocandidates
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#co-investigators" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#co-investigators" />
     </h2>
     <p>Scholars leading different aspects of the LinkedMusic project and other affiliated projects.</p>
     <p>Chercheurs menant différents aspects du projet LinkedMusic et d’autres projets affiliés.</p>
@@ -140,7 +133,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#collaborators">
     Collaborators / collaborateurs et collaboratrices
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#collaborators" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#collaborators" />
     </h2>
     <p>Leaders of projects or organizations aligned with the goals of the LinkedMusic project.</p>
     <p>Responsables de projets ou d’organisations dont les objectifs correspondent à ceux du projet LinkedMusic.</p>
@@ -258,7 +251,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#partners">
     Partners / partenaires
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#partners" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#partners" />
     </h2>
     <p>Libraries, museums, and other organizations affiliated with the project.</p>
     <p>Bibliothèques, musées et autres organisations affiliées au projet.</p>
@@ -314,7 +307,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#advisory">
     Advisory Board
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#advisory" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#advisory" />
     </h2>
     Recognized leaders who have provided feedback on the goals and mission of LinkedMusic.
     <hr>
@@ -348,7 +341,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#researchers">
     Researchers
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#researchers" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#researchers" />
     </h2>
     Researchers engaged in research and development of the LinkedMusic project.
     <hr>
@@ -399,7 +392,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#project-manager">
     Project Manager
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#project-manager" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#project-manager" />
     </h2>
     <hr>
     <div id="project-manager" class="collapse in">
@@ -419,7 +412,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#post-doc">
     Postdoctoral Researchers
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#post-doc" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#post-doc" />
     </h2>
     <hr>
     <div id="post-doc" class="collapse in">
@@ -439,7 +432,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#phds">
     PHD Students
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#phds" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#phds" />
     </h2>
     PHD students engaged in research and development of the LinkedMusic project.
     <hr>
@@ -460,7 +453,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#masters">
     Masters Students
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#masters" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#masters" />
     </h2>
     Masters students engaged in research and development of the LinkedMusic project.
     <hr>
@@ -488,7 +481,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#students">
     Undergraduate Students
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#students" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#students" />
     </h2>
     Undergraduate students engaged in research and development of the LinkedMusic project.
     <hr>
@@ -576,7 +569,7 @@
     <div class="col-lg-12">
     <h2 data-toggle="collapse" data-target="#alumni">
     Student Alumni
-    <img class="icon_rotation" src="http://localhost:4000/assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#alumni" />
+    <img class="icon_rotation" src="../assets/0-expand_on.png" style="float:right;width:50px;height:50px" data-toggle="collapse" data-target="#alumni" />
     </h2>
     <hr>
     <div id="alumni" class="collapse in">
@@ -584,21 +577,27 @@
     </div>
     </div>
     </div>
-    </div> -->
+    </div>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
         $('.icon_rotation').on({
           'click': function () {
             var origsrc = $(this).attr('src');
             var src = '';
-            if (origsrc == 'http://localhost:4000/assets/0-expand_off.png') src = 'http://localhost:4000/assets/0-expand_on.png';
-            if (origsrc == 'http://localhost:4000/assets/0-expand_on.png') src = 'http://localhost:4000/assets/0-expand_off.png';
+            if (origsrc == '../assets/0-expand_off.png') src = '../assets/0-expand_on.png';
+            if (origsrc == '../assets/0-expand_on.png') src = '../assets/0-expand_off.png';
             $(this).attr('src', src);
           }
         });
       });
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://localhost:4000/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
   </body>
 </html>
