Fix broken links

--- a/activities/index.html
+++ b/activities/index.html
@@ -14,12 +14,12 @@
     <title>
       Activities &middot; LinkedMusic
     </title>
-    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="../../assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon_io/site.webmanifest">
     <!-- CSS -->
-    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
   <body id ="Site" class='layout-reverse theme-base-sm sidebar-overlay'>
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -34,17 +34,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="../../">LinkedMusic</a>
+          <a class="navbar-brand" href="../">LinkedMusic</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="../../about">About</a></li>
-            <li><a href="../../people">Participants</a></li>
-            <li><a href="../../activities">Activities</a></li>
-            <li><a href="../../references">References</a></li>
-            <li><a href="../../vim">VIM</a></li>
-            <li><a href="../../opportunities">Opportunities</a></li>
-            <li><a href="../../contact">Contact us</a></li>
+            <li><a href="../about">About</a></li>
+            <li><a href="../people">Participants</a></li>
+            <li><a href="../activities">Activities</a></li>
+            <li><a href="../references">References</a></li>
+            <li><a href="../vim">VIM</a></li>
+            <li><a href="../opportunities">Opportunities</a></li>
+            <li><a href="../contact">Contact us</a></li>
           </ul>
           <div id="google_translate_element"></div>
         </div>
@@ -82,8 +82,8 @@
             <li>Jonathan Manton, Yale University</li>
             <li>Anna de Bakker, McGill University</li>
           </ul>
-          <p>The full agenda of the meeting can be found <a href="https://linkedmusic.ca/meetings">here</a></p>
-          <p>PDFS from the presentations can be found <a href="https://linkedmusic.ca/meetingpdfs">here</a></p>
+          <p>The full agenda of the meeting can be found <a href="../meetings.md">here</a></p>
+          <p>PDFS from the presentations can be found <a href="../meetingpdfs">here</a></p>
           <h3 id="linkedmusic-workshop-i-music-databases">LinkedMusic Workshop I: Music Databases</h3>
           <p>This workshop, held on November 18th, 2022, was co-organized with CIRMMT Research Axis 2 (Music Information Research).</p>
           <p><strong>Presenters</strong></p>
@@ -104,7 +104,7 @@
             <li>Anna de Bakker, McGill University</li>
           </ul>
           <p>The full agenda of this workshop can be found <a href="https://www.cirmmt.org/en/events/workshops/research/linkedmusic-workshop">here</a></p>
-          <p>PDFS from the presentations can be found <a href="https://linkedmusic.ca/meetingpdfs">here</a></p>
+          <p>PDFS from the presentations can be found <a href="../meetingpdfs">here</a></p>
           <br>
         </div>
       </div>
@@ -116,6 +116,6 @@
     </script>
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
   </body>
 </html>
