--- a/references/index.html
+++ b/references/index.html
@@ -62,7 +62,7 @@
         <div class="col-lg-12">
           <h4 id="formatting-indicates-contributions-from-co-applicants-and-collaborators">Formatting indicates contributions from <strong>co-applicants</strong> and <strong><em>collaborators</em></strong>.</h4>
           <h4 id="la-présentation-indique-les-contributions-de-cocandidats-et-de-collaborateurs">La présentation indique les contributions de <strong>cocandidats</strong> et de <strong><em>collaborateurs</em></strong>.</h4>
-          <h4 id="abstracts-from-2020-23-papers-can-be-found-here">Abstracts from 2020-23 papers can be found <a href="https://linkedmusic.ca/papers/">here</a></h4>
+          <h4 id="abstracts-from-2020-23-papers-can-be-found-here">Abstracts from 2020-23 papers can be found <a href="../papers/">here</a></h4>
           <p><br /></p>
           <p>Aalberg, Trond, Audun Vennesland, and Maliheh Farrokhnia. 2015. “A Pattern-Based Framework for Best Practice Implementation of CRM/FRBRoo.” In <em>First International Workshop on Semantic Web for Cultural Heritage</em>, 539:472–81. Communications in Computer and Information Science. Futuroscope, France: Springer International Publishing. https://doi.org/10.1007/978-3-319-23201-0.</p>
           <p>Abdallah, Samer, Emmanouil Benetos, Nicolas Gold, Steven Hargreaves, Tillman Weyde, and Daniel Wolff. 2017. “The Digital Music Lab: A Big Data Infrastructure for Digital Musicology.” <em>Journal on Computing and Cultural Heritage</em> 10 (1):1–21. https://doi.org/10.1145/2983918.</p>
