--- a/meetingpdfs/index.html
+++ b/meetingpdfs/index.html
@@ -63,30 +63,30 @@
           <h4 id="below-are-the-pdf-presentations-from-the-cirmmt-workshop-18-nov-2022-and-the-linked-music-project-meeting-19-nov-and-20-nov-22">Below are the PDF presentations from the CIRMMT Workshop (18 Nov 2022) and the Linked Music Project Meeting (19 Nov and 20 Nov 22)</h4>
           <h4 id="linkedmusic-workshop-i-music-databases-18-november-2022">LinkedMusic Workshop I: Music Databases: 18 November 2022</h4>
           <ul>
-            <li>Dig That Lick / Weimar Jazz  Database (Simon Dixon): <a href="https://linkedmusic.ca/pdfs/Montreal2022-Databases-slides.pdf">PDF</a></li>
+            <li>Dig That Lick / Weimar Jazz  Database (Simon Dixon): <a href="../pdfs/Montreal2022-Databases-slides.pdf">PDF</a></li>
             <li>Cantus DB / Cantus Index (Debra Lacoste, Jennifer Bain, Jacob deGroot-Maggetti and Junhao Wang)</li>
             <li>Cantus Ultimus (Néstor Nápoles)</li>
             <li>DIAMM (Andrew Hankinson)</li>
-            <li>SIMSSA DB (Cory McKay): <a href="https://linkedmusic.ca/pdfs/mckay22simssa01intrdoction.pdf">PDF</a></li>
-            <li>Music Databases at the Bavarian State Library (Jürgen Diet): <a href="https://linkedmusic.ca/pdfs/Music_Databases_at_the_BSB.pdf">PDF</a></li>
-            <li>RISM Digital (Laurent Pugin): <a href="https://linkedmusic.ca/pdfs/2022-cirmmt_pugin.pdf">PDF</a></li>
-            <li>MetaBrainz databases (Alastair Porter): <a href="https://linkedmusic.ca/pdfs/porter%202022%20Linked%20Music%20CIRMMT%20MetaBrainz.pdf">PDF</a></li>
-            <li>Other music databases (Marisa Goldman and Anna de Bakker): <a href="https://linkedmusic.ca/pdfs/goldmandebakkermusicdboverview.pdf">PDF</a></li>
+            <li>SIMSSA DB (Cory McKay): <a href="../pdfs/mckay22simssa01intrdoction.pdf">PDF</a></li>
+            <li>Music Databases at the Bavarian State Library (Jürgen Diet): <a href="../pdfs/Music_Databases_at_the_BSB.pdf">PDF</a></li>
+            <li>RISM Digital (Laurent Pugin): <a href="../pdfs/2022-cirmmt_pugin.pdf">PDF</a></li>
+            <li>MetaBrainz databases (Alastair Porter): <a href="../pdfs/porter%202022%20Linked%20Music%20CIRMMT%20MetaBrainz.pdf">PDF</a></li>
+            <li>Other music databases (Marisa Goldman and Anna de Bakker): <a href="../pdfs/goldmandebakkermusicdboverview.pdf">PDF</a></li>
           </ul>
           <h4 id="linkedmusic-project-meeting-i-19th-and-20th-november-2022">LinkedMusic Project Meeting I: 19th and 20th November 2022</h4>
           <ul>
             <li>Cantus DB / Cantus Index (Junhao Wang &amp; Jacob deGroot-Maggetti)</li>
             <li>Cantus Ultimus (Néstor Nápoles)</li>
-            <li>SIMSSA DB (Cory McKay): <a href="https://linkedmusic.ca/pdfs/mckay22simssa02details.pdf">PDF</a></li>
+            <li>SIMSSA DB (Cory McKay): <a href="../pdfs/mckay22simssa02details.pdf">PDF</a></li>
             <li>DIAMM (Andrew Hankinson)</li>
-            <li>RISM Digital (Laurent Pugin): <a href="https://linkedmusic.ca/pdfs/2022-linked-music_pugin.pdf">PDF</a></li>
-            <li>Dig That Lick / Weimar Jazz Database (Simon Dixon): <a href="https://linkedmusic.ca/pdfs/Montreal2022-Ontologies-slides.pdf">PDF</a></li>
+            <li>RISM Digital (Laurent Pugin): <a href="../pdfs/2022-linked-music_pugin.pdf">PDF</a></li>
+            <li>Dig That Lick / Weimar Jazz Database (Simon Dixon): <a href="../pdfs/Montreal2022-Ontologies-slides.pdf">PDF</a></li>
             <li>LC Medium of Performance Thesaurus (Kevin Kishimoto)</li>
-            <li>Bavarian State Library (Jürgen Diet): <a href="https://linkedmusic.ca/pdfs/Metadata_in_BSB_Music_Databases.pdf">PDF</a></li>
-            <li>MetaBrainz databases (Alastair Porter): <a href="https://linkedmusic.ca/pdfs/porter%202022%20Linked%20Music%20MusicBrainz.pdf">PDF</a></li>
+            <li>Bavarian State Library (Jürgen Diet): <a href="../pdfs/Metadata_in_BSB_Music_Databases.pdf">PDF</a></li>
+            <li>MetaBrainz databases (Alastair Porter): <a href="../pdfs/porter%202022%20Linked%20Music%20MusicBrainz.pdf">PDF</a></li>
             <li>Linked Art &amp; Lux (Rob Sanderson)</li>
-            <li>Mapping Manuscript Migrations &amp; MELD (Kevin Page &amp; David Lewis): <a href="https://linkedmusic.ca/pdfs/MELD%20overview%20-%20LinkedMusic%20Nov%202022.pdf">PDF1</a> <a href="https://linkedmusic.ca/pdfs/MMM%20overview%20-%20LinkedMusic%20Nov%202022.pdf">PDF2</a></li>
-            <li>Audiovisual metadata standards (Jonathan Manton): <a href="https://linkedmusic.ca/pdfs/LinkedMusic%20Meeting%2011192022%20-%20AV%20metadata%20Standards.pdf">PDF</a></li>
+            <li>Mapping Manuscript Migrations &amp; MELD (Kevin Page &amp; David Lewis): <a href="../pdfs/MELD%20overview%20-%20LinkedMusic%20Nov%202022.pdf">PDF1</a> <a href="../pdfs/MMM%20overview%20-%20LinkedMusic%20Nov%202022.pdf">PDF2</a></li>
+            <li>Audiovisual metadata standards (Jonathan Manton): <a href="../pdfs/LinkedMusic%20Meeting%2011192022%20-%20AV%20metadata%20Standards.pdf">PDF</a></li>
             <li>Fragmentarium (Anna de Bakker)</li>
           </ul>
           <br>
