Update computecanada class name to the new name

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <a href="https://ddmal.music.mcgill.ca/" target="_blank" class="ddmal"></a>
       <a href="https://www.cirmmt.org" target="_blank" class="cirmmt"></a>
       <a href="https://www.frqsc.gouv.qc.ca" target="_blank" class="frqsc"></a>
-      <a href="https://alliancecan.ca/en" target="_blank" class="computecanada"></a>
+      <a href="https://alliancecan.ca/en" target="_blank" class="alliancecan"></a>
       <a href="https://www.calculquebec.ca" target="_blank" class="calculquebec"></a>
     </div>
     <br>
