--- a/about/index.html
+++ b/about/index.html
@@ -38,9 +38,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav nav mr-auto">
-            <li><a href="../about">About</a></li>
-            <li><a href="../people">Participants</a></li>
-            <li><a href="../activities">Activities</a></li>
+            <li><a href="../abut">About</a></li>
+            <li><a href="../pople">Participants</a></li>
+            <li><a href="../activties">Activities</a></li>
             <li><a href="../references">References</a></li>
             <li><a href="../vim">VIM</a></li>
             <li><a href="../opportunities">Opportunities</a></li>
