--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><a href="vim">VIM</a></li>
             <li><a href="opportunities">Opportunities</a></li>
             <li><a href="contact">Contact us</a></li>
+            <li><a href="broken">broken</a></li>
           </ul>
           <div id="google_translate_element"></div>
         </div>
